# my-tools

./: .gitignore
skills-manager/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
skills-manager/docs/superpowers/plans/: 2026-05-06-skill-manager-implementation.md  2026-05-10-style-migration.md  2026-05-11-agent-config-enhancement.md  2026-05-11-repo-branch-selection.md  2026-05-11-settings-page-layout-redesign.md  2026-05-12-sqlite-storage.md  2026-05-13-ui-bug-fixes.md
skills-manager/docs/superpowers/specs/: 2026-05-04-skill-manager-design.md  2026-05-11-agent-config-enhancement.md  2026-05-11-repo-branch-selection-design.md  2026-05-11-settings-page-layout-redesign.md  2026-05-12-sqlite-storage-design.md  2026-05-13-ui-bug-fixes-design.md
skills-manager/skills-manager/src/components/: AgentDialog.vue  (+1 more)
skills-manager/src/: App.vue  main.ts  router.ts
skills-manager/src-tauri/: Cargo.toml  tauri.conf.json
skills-manager/src-tauri/capabilities/: default.json
skills-manager/src-tauri/icons/: icon.icns
skills-manager/src-tauri/nsis/: installer.nsi
skills-manager/src-tauri/src/: git.rs  lib.rs  logger.rs  main.rs  scheduler.rs  skill_parser.rs  symlink.rs
skills-manager/src-tauri/src/commands/: config.rs  mod.rs  repo.rs  skill.rs  system.rs
skills-manager/src-tauri/src/db/: agents.rs  connection.rs  mod.rs  repositories.rs  schema.rs  settings.rs  skills.rs
skills-manager/src-tauri/src/models/: config.rs  mod.rs  skill.rs  system.rs
skills-manager/src/api/: tauri.ts
skills-manager/src/components/: AgentDialog.vue  ConflictDialog.vue  GitInstallDialog.vue  SettingsDialog.vue  SkillCard.vue  SkillDetailPanel.vue
skills-manager/src/stores/: config.ts  skills.ts  sync.ts
skills-manager/src/styles/: global.css
skills-manager/src/views/: AddRepoDialog.vue  Home.vue  Settings.vue
ssh-tunnel-manager/: .gitignore  bash.exe.stackdump  build.bat  index.html  package.json  pnpm-lock.yaml
ssh-tunnel-manager/src/: App.vue  main.ts
ssh-tunnel-manager/src-tauri/: Cargo.toml  tauri.conf.json
ssh-tunnel-manager/src-tauri/capabilities/: default.json
ssh-tunnel-manager/src-tauri/icons/: generate_ico.py  generate_icon.py  generate_png.py
ssh-tunnel-manager/src-tauri/nsis/: hooks.nsi  installer.nsi
ssh-tunnel-manager/src-tauri/src/: lib.rs  main.rs
ssh-tunnel-manager/src-tauri/src/commands/: app_setting.rs  autostart.rs  config.rs  group.rs  log.rs  mod.rs  tunnel.rs
ssh-tunnel-manager/src-tauri/src/db/: mod.rs  sqlite.rs
ssh-tunnel-manager/src-tauri/src/models/: app_setting.rs  config.rs  group.rs  log.rs  mod.rs  tunnel_status.rs
ssh-tunnel-manager/src-tauri/src/ssh/: autostart.rs  key_setup.rs  mod.rs  monitor.rs  sidecar.rs
ssh-tunnel-manager/src-tauri/src/updater/: mod.rs
ssh-tunnel-manager/src-tauri/src/utils/: autostart.rs  crypto.rs  logger.rs  mod.rs
ssh-tunnel-manager/src/api/: index.ts  tauri.ts
ssh-tunnel-manager/src/components/: ConfigForm.vue  KeySetupDialog.vue  LogPanel.vue  Sidebar.vue  TunnelCard.vue  TunnelList.vue  UpdateDialog.vue
ssh-tunnel-manager/src/router/: index.ts
ssh-tunnel-manager/src/stores/: config.ts  group.ts  index.ts  keySetup.ts  tunnel.ts  update.ts
ssh-tunnel-manager/src/types/: index.ts
ssh-tunnel-manager/src/utils/: format.ts
ssh-tunnel-manager/src/views/: Home.vue  Settings.vue
tool-update-server/: Cargo.toml  build.rs
tool-update-server/docs/superpowers/plans/: 2026-05-07-tool-update-server-implementation.md
tool-update-server/docs/superpowers/specs/: 2026-05-07-tool-update-server-design.md
tool-update-server/src/: handlers.rs  main.rs  models.rs  storage.rs
tool-update-server/static/: style.css
(+22 files in other folders)
