[package]
name = "ssh-tunnel-manager"
version = "0.1.7"
description = "SSH Tunnel Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "ssh_tunnel_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
thiserror = "1"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
winreg = "0.52"
# SSH key generation and deployment
ssh-key = { version = "0.6", features = ["ed25519"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
panic = "abort"
codegen-units = 16
lto = "thin"
opt-level = "s"
strip = true
